--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,7 +1,7 @@
 /* TODO Add site wide styles */
 body{
-    background-color: rgb(48, 48, 48);
-    color: white;
+    /* background-color: rgb(48, 48, 48);
+    color: white; */
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     display: flex;
     flex-direction: column;
