--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,8 +1,89 @@
 /* TODO Add site wide styles */
 body{
-    /* background-color: rgb(48, 48, 48);
-    color: white; */
+    background-color: rgb(48, 48, 48);
+    color: white;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     display: flex;
     flex-direction: column;
+    background-image: url(https://www.roguefitness.com/media/catalog/product/cache/1/rogue_header_2015/472321edac810f9b2465a359d8cdc0b5/r/o/rogue-dumbbells-h.jpg);
+}
+ .content{
+    display: flex;
+    margin: 5px 5px 5px 5px;
+    border: 5px 5px 5px 5px;
+    background-color: tomato;
+ }
+
+.selector {
+    background-color: turquoise;
+}
+select {
+    color: white;
+    background-color: rgb(0, 93, 6);
+    border: rgba(255, 99, 71, 0);
+    padding: 5px;
+    margin: 5px 0px 0px;
+    border-radius: 10px;
+}
+
+.nav{
+    justify-content: center;
+    align-items: center;
+    background-color: rgb(65, 65, 65);
+    border: rgba(89, 89, 89);
+    box-shadow: 5px 5px 5px 0px rgb(33, 33, 33);
+    margin: 5px 5px 5px 5px;
+    width: 10%;
+    height: 100%;
+}
+#user{
+    color: white;
+    background-color: rgb(0, 93, 6);
+    padding: 5px;
+    margin: 5px 0px 0px;
+    border-radius: 10px;
+    border-color: rgba(0, 128, 128, 0);
+}
+
+.user {
+    padding: 5px 5px 0px 5px;
+}
+
+.noteForms{
+    display: flex;
+    flex-direction: column;
+    background-color: white;
+    align-items: flex-start;
+    justify-content: center;
+    width: 500px;
+
+}
+.noteForm{
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+    justify-content: center;
+    background-color: rgb(65, 65, 65);
+    width: 505px;
+
+}
+#note{
+    width: 500px;
+    height: 500px;
+    background-color: rgb(65, 65, 65);
+    border: rgba(255, 255, 255, 0);
+}
+#title{
+    width: 500px;
+    background-color: rgb(65, 65, 65);
+    border: rgba(255, 255, 255, 0);
+}
+#submit {
+    display: flex;
+    justify-content: flex-end;
+    align-items: flex-end;
+    background-color: rgb(65, 65, 65);
+    border: rgba(255, 255, 255, 0);
+    width: 150px;
+    padding: 20px;
 }
