--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -5,18 +5,23 @@ body{
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     display: flex;
     flex-direction: column;
-    background-image: url(https://www.roguefitness.com/media/catalog/product/cache/1/rogue_header_2015/472321edac810f9b2465a359d8cdc0b5/r/o/rogue-dumbbells-h.jpg);
+    background-image: url("https://www.roguefitness.com/media/catalog/product/cache/1/rogue_header_2015/472321edac810f9b2465a359d8cdc0b5/r/o/rogue-dumbbells-h.jpg");
+
 }
- .content{
+
+.content{
     display: flex;
     margin: 5px 5px 5px 5px;
     border: 5px 5px 5px 5px;
     background-color: tomato;
- }
+}
 
 .selector {
-    background-color: turquoise;
+    background-color: rgb(0, 93, 6);
+    /* padding: 2px 2px 2px 2px; */
+    margin: 5px 5px 5px 5px;
 }
+
 select {
     color: white;
     background-color: rgb(0, 93, 6);
@@ -27,15 +32,23 @@ select {
 }
 
 .nav{
-    justify-content: center;
-    align-items: center;
+    /* display: flex;
+    flex-direction: row; */
+    /* justify-content: center;
+    align-items: center; */
     background-color: rgb(65, 65, 65);
     border: rgba(89, 89, 89);
     box-shadow: 5px 5px 5px 0px rgb(33, 33, 33);
-    margin: 5px 5px 5px 5px;
-    width: 10%;
+    margin: 25px 5px 25px 5px;
+    width: 25%;
     height: 100%;
 }
+
+#icon{
+    width: 100px;
+    margin: 15px 15px 15px 15px;
+}
+
 #user{
     color: white;
     background-color: rgb(0, 93, 6);
