notebook drop down select in progress

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -71,6 +71,7 @@ select {
     width: 500px;
 
 }
+
 .noteForm{
     display: flex;
     flex-direction: column;
@@ -80,17 +81,20 @@ select {
     width: 505px;
 
 }
+
 #note{
     width: 500px;
     height: 500px;
     background-color: rgb(65, 65, 65);
     border: rgba(255, 255, 255, 0);
 }
+
 #title{
     width: 500px;
     background-color: rgb(65, 65, 65);
     border: rgba(255, 255, 255, 0);
 }
+
 #submit {
     display: flex;
     justify-content: flex-end;
@@ -99,4 +103,30 @@ select {
     border: rgba(255, 255, 255, 0);
     width: 150px;
     padding: 20px;
+}
+
+#modal {
+    position: fixed;
+    top: 0;
+    right: 0;
+    left: 0;
+    bottom: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: rgba(118, 118, 118, 0.421);
+}
+
+#modal-background {
+    position: fixed;
+    top: 0;
+    right: 0;
+    left: 0;
+    bottom: 0;
+    background-color: rgba(0, 0, 0, 0.7);
+}
+
+#modal-content {
+    position: absolute;
+    background-color:white;
 }
