--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -11,15 +11,20 @@ body{
 
 .content{
     display: flex;
+    flex-direction: column;
+    width: 40%;
     margin: 5px 5px 5px 5px;
     border: 5px 5px 5px 5px;
-    background-color: tomato;
+    background-color: rgb(65, 65, 65);
 }
 
+
 .selector {
+    position: static;
     background-color: rgb(0, 93, 6);
     /* padding: 2px 2px 2px 2px; */
     margin: 5px 5px 5px 5px;
+    width: 10%;
 }
 
 select {
@@ -65,10 +70,11 @@ select {
 .noteForms{
     display: flex;
     flex-direction: column;
-    background-color: white;
-    align-items: flex-start;
+    float: right;
+    background-color: rgb(65, 65, 65);
+    align-items: flex-end;
     justify-content: center;
-    width: 500px;
+    width: 505px;
 
 }
 .noteForm{
@@ -77,31 +83,39 @@ select {
     align-items: flex-end;
     justify-content: center;
     background-color: rgb(65, 65, 65);
-    width: 505px;
+    width: 700px;
+    float: right;
+    margin-right: 300px;
+    margin-bottom: 100px;
+    margin-top: 20px;
 
 }
 
 #note{
-    width: 500px;
+    width: 700px;
     height: 500px;
     background-color: rgb(65, 65, 65);
     border: rgba(255, 255, 255, 0);
 }
 
 #title{
-    width: 500px;
+    width: 700px;
     background-color: rgb(65, 65, 65);
     border: rgba(255, 255, 255, 0);
 }
 
 #submit {
     display: flex;
-    justify-content: flex-end;
-    align-items: flex-end;
-    background-color: rgb(65, 65, 65);
+    justify-content: center;
+    align-items: center;
+    background-color: rgb(89, 89, 89);
+    border: transparent;
+    border-radius: 5px;
     border: rgba(255, 255, 255, 0);
     width: 150px;
-    padding: 20px;
+    padding: 10px;
+    margin: 5px;
+
 }
 
 #modal {
@@ -111,6 +125,7 @@ select {
     left: 0;
     bottom: 0;
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
     background-color: rgba(118, 118, 118, 0.421);
@@ -126,14 +141,90 @@ select {
 }
 
 #modal-content {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
     position: absolute;
-    background-color:white;
+    background-color: rgb(65, 65, 65);
+
+}
+
+#login{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 }
 
 .notesInBook {
-    background-color: yellowgreen;
-}
+    display: flex;
+    flex-direction: column;
+    width: 40%;
+    margin: 5px 5px 5px 5px;
+    border: 5px 5px 5px 5px;
+    background-color: rgb(65, 65, 65);}
 
 a{
     color: white;
+}
+
+.links{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: rgb(65, 65, 65);
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+
+}
+
+#important{
+    position: fixed;
+    right: 0;
+}
+
+.in{
+    width: 5%;
+    bottom: 0;
+    right: 0;
+}
+.create{
+    padding: 0px 0px 10px 0px;
+    font-size: 20px;
+}
+
+::marker {
+    color: rgba(0, 0, 255, 0);
+    font-size: 1.2em;
+}
+.change{
+    display: flex;
+    justify-content: flex-end;
+}
+#setEdit{
+    background-color: rgb(89, 89, 89);
+    border-radius: 5px;
+    border: transparent;
+    margin: 5px;
+}
+
+#setDelete{
+    background-color: rgb(89, 89, 89);
+    border: transparent;
+    border-radius: 5px;
+    margin: 5px;
+}
+
+
+#noteName{
+    margin: 5px 5px 5px 10px;
+}
+#theText{
+    margin: 5px 10px 10px 20px;
+}
+#placement{
+    margin: 5px 5px 5px 10px;
+}
+#bookName{
+    margin: 5px 10px 10px 20px;
 }
